
 * geany.glade, src/interface.c, src/prefs.c, src/geany.h,
   src/keyfile.c, src/ui_utils.c, src/main.c:
   Added an Apply button to preferences dialog.
   New setting to show/hide the Quit toolbar item.
   New setting to show/hide notebook tabs.
 * src/document.c, src/treeviews.c, src/treeviews.h:
   Colour also the open files list items according to their changed
   state.


2006-10-28  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/ui_utils.c:
   Add temporary fix for sci infinite loop in Document::GetColumn(int)
   when current pos is beyond document end (can occur when removing
   blocks of selected lines especially brace sections near end of
   file).


2006-10-28  Enrico Tröger  <enrico.troeger@uvena.de>

 * doc/geany.docbook:
   Some small updates.
   Got rid of &app; entitity.
   Extended description of encoding support.


2006-10-27  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/highlighting.c, src/filetypes.c, src/filetypes.h,
   data/filetypes.java, data/filetypes.cpp, data/filetypes.ferite,
   data/filetypes.c, data/filetypes.d:
   Add filetypes_get_conf_extension() and use in highlighting.c.
   Fix a memory leak in load_keyfiles().
   Group C-like default syntax in init_c_like_styleset().
   Make C-like comment colour darker; make globalclass brighter to
   distinguish it from word colour.
   Make Java use same default syntax highlighting colours as C.
 * src/utils.c:
   Limit parse depth to 500 chars when parsing C-like function name.
 * src/sci_cb.c:
   Find last unmatched open bracket for Show Calltip so nested matched
   brackets are ignored (except LaTeX).


2006-10-26  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/keybindings.c, src/keybindings.h:
   Only accept editing keybindings when the current Scintilla widget
   has focus.
   Group editing keybindings together in cb_func_edit.
   Change keybinding callbacks to pass keybinding index as an argument.


2006-10-25  Nick Treleaven  <nick.treleaven@btinternet.com>
