@@ -1030,46 +1030,6 @@ toolbar_popup_menu                     (GtkWidget *widget,
 
 
 void
-on_taglist_tree_selection_changed      (GtkTreeSelection *selection,
-                                        gpointer data)
-{
-	GtkTreeIter iter;
-	GtkTreeModel *model;
-	gchar *string;
-
-	if (gtk_tree_selection_get_selected(selection, &model, &iter))
-	{
-		gtk_tree_model_get(model, &iter, 0, &string, -1);
-		if (string && (strlen(string) > 0))
-		{
-			gint idx = document_get_cur_idx();
-			utils_goto_line(idx, utils_get_local_tag(idx, string));
-			g_free(string);
-		}
-	}
-}
-
-
-void
-on_openfiles_tree_selection_changed    (GtkTreeSelection *selection,
-                                        gpointer data)
-{
-	GtkTreeIter iter;
-	GtkTreeModel *model;
-	gint idx = 0;
-
-	// use switch_notebook_page to ignore changing the notebook page because it is already done
-	if (gtk_tree_selection_get_selected(selection, &model, &iter) && ! app->ignore_callback)
-	{
-		gtk_tree_model_get(model, &iter, 1, &idx, -1);
-		gtk_notebook_set_current_page(GTK_NOTEBOOK(app->notebook),
-					gtk_notebook_page_num(GTK_NOTEBOOK(app->notebook),
-					(GtkWidget*) doc_list[idx].sci));
-	}
-}
-
-
-void
 on_filetype_change                     (GtkMenuItem     *menuitem,
                                         gpointer         user_data)
 {
@@ -1324,126 +1284,6 @@ on_show_color_chooser1_activate        (GtkMenuItem     *menuitem,
 
 	sci_cb_find_current_word(doc_list[idx].sci, pos, colour, sizeof colour);
 	dialogs_show_color(colour);
-}
-
-
-/* callback function for all treeview widgets */
-gboolean
-on_tree_view_button_press_event        (GtkWidget *widget,
-                                        GdkEventButton *event,
-                                        gpointer user_data)
-{
-	// user_data might be NULL, GPOINTER_TO_INT returns 0 if called with NULL
-	
-	if (event->button == 1)
-	{
-		switch (GPOINTER_TO_INT(user_data))
-		{
-			case TREEVIEW_SYMBOL:
-			{	// allow reclicking of taglist treeview item
-				GtkTreeSelection *select =
-					gtk_tree_view_get_selection(GTK_TREE_VIEW(widget));
-				on_taglist_tree_selection_changed(select, NULL);
-				break;
-			}
-			case MSG_COMPILER:
-			{	// single click in the compiler treeview
-				msgwin_goto_compiler_file_line();
-				break;
-			}
-			case MSG_MESSAGE:
-			{	// single click in the message treeview (results of 'Find usage')
-				msgwin_goto_messages_file_line();
-				break;
-			}
-		}
-	}
-
-	if (event->button == 3)
-	{	// popupmenu to hide or clear the active treeview
-		if (GPOINTER_TO_INT(user_data) == MSG_STATUS)
-			gtk_menu_popup(GTK_MENU(msgwindow.popup_status_menu), NULL, NULL, NULL, NULL, event->button, event->time);
-		else if (GPOINTER_TO_INT(user_data) == MSG_MESSAGE)
-			gtk_menu_popup(GTK_MENU(msgwindow.popup_msg_menu), NULL, NULL, NULL, NULL, event->button, event->time);
-		else if (GPOINTER_TO_INT(user_data) == MSG_COMPILER)
-			gtk_menu_popup(GTK_MENU(msgwindow.popup_compiler_menu), NULL, NULL, NULL, NULL, event->button, event->time);
-		else if (GPOINTER_TO_INT(user_data) == TREEVIEW_OPENFILES)
-			gtk_menu_popup(GTK_MENU(tv.popup_openfiles), NULL, NULL, NULL, NULL, event->button, event->time);
-		else if (GPOINTER_TO_INT(user_data) == TREEVIEW_SYMBOL)
-			gtk_menu_popup(GTK_MENU(tv.popup_taglist), NULL, NULL, NULL, NULL, event->button, event->time);
-	}
-	return FALSE;
-}
-
-
-void
-on_openfiles_tree_popup_clicked        (GtkMenuItem     *menuitem,
-                                        gpointer         user_data)
-{
-	GtkTreeIter iter;
-	GtkTreeSelection *selection = gtk_tree_view_get_selection(GTK_TREE_VIEW(tv.tree_openfiles));
-	GtkTreeModel *model;
-	gint idx = -1;
-
-	if (gtk_tree_selection_get_selected(selection, &model, &iter))
-	{
-		gtk_tree_model_get(model, &iter, 1, &idx, -1);
-		if (idx >= 0)
-		{
-			switch (GPOINTER_TO_INT(user_data))
-			{
-				case 0:
-				{
-					document_remove(gtk_notebook_page_num(GTK_NOTEBOOK(app->notebook), GTK_WIDGET(doc_list[idx].sci)));
-					break;
-				}
-				case 1:
-				{
-					if (doc_list[idx].changed) document_save_file(idx, FALSE);
-					break;
-				}
-				case 2:
-				{
-					on_toolbutton23_clicked(NULL, NULL);
-					break;
-				}
-				case 3:
-				{
-					app->sidebar_openfiles_visible = FALSE;
-					ui_treeviews_show_hide(FALSE);
-					break;
-				}
-				case 4:
-				{
-					app->sidebar_visible = FALSE;
-					ui_treeviews_show_hide(TRUE);
-					break;
-				}
-			}
-		}
-	}
-}
-
-
-void
-on_taglist_tree_popup_clicked          (GtkMenuItem     *menuitem,
-                                        gpointer         user_data)
-{
-	switch (GPOINTER_TO_INT(user_data))
-	{
-		case 0:
-		{
-			app->sidebar_symbol_visible = FALSE;
-			ui_treeviews_show_hide(FALSE);
-			break;
-		}
-		case 1:
-		{
-			app->sidebar_visible = FALSE;
-			ui_treeviews_show_hide(TRUE);
-			break;
-		}
-	}
 }
 
 
